--- a/BSuOS Prediction/Readme
+++ b/BSuOS Prediction/Readme
@@ -1,1 +1,2 @@
-Data Science Challenge
+The objective of this Data Science challenge is to be able to predict what the BSUoS charge will be ahead of time. 
+The final requirement is to develop a machine learning model that predicts BSUoS charges one business day ahead.
